--- a/gallery/index.html
+++ b/gallery/index.html
@@ -11,26 +11,26 @@
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
     }
     *{box-sizing:border-box}
-    body{margin:0;background:linear-gradient(180deg,#071021 0%, #081428 100%); color:var(--white); -webkit-font-smoothing:antialiased}
+    body{margin:0; background:linear-gradient(180deg,#071021 0%, #081428 100%); color:var(--white); -webkit-font-smoothing:antialiased}
     .container{max-width:var(--max-width); margin:0 auto; padding:28px}
-    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#111827,#0ea5a9);display:flex;align-items:center;justify-content:center;font-weight:700}
-    .brand h1{font-size:18px;margin:0}
-    .brand p{margin:0;font-size:13px;color:var(--muted)}
-    nav a{color:var(--white);text-decoration:none;margin-left:16px;font-size:14px}
+    header{display:flex; align-items:center; justify-content:space-between; gap:16px}
+    .brand{display:flex; align-items:center; gap:12px}
+    .logo{width:48px; height:48px; border-radius:10px; background:linear-gradient(135deg,#111827,#0ea5a9); display:flex; align-items:center; justify-content:center; font-weight:700}
+    .brand h1{font-size:18px; margin:0}
+    .brand p{margin:0; font-size:13px; color:var(--muted)}
+    nav a{color:var(--white); text-decoration:none; margin-left:16px; font-size:14px}
     nav a:hover{text-decoration:underline;}
-    .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:16px;margin:20px 0}
-    .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:12px;overflow:hidden;position:relative}
-    .card img{width:100%;height:260px;object-fit:cover;display:block;cursor:pointer}
+    .gallery{display:grid; grid-template-columns:repeat(auto-fill,minmax(220px,1fr)); gap:16px; margin:20px 0}
+    .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01)); border-radius:12px; overflow:hidden; position:relative}
+    .card img{width:100%; height:260px; object-fit:cover; display:block; cursor:pointer}
     .card .meta{padding:12px}
-    .card .meta h3{margin:0 0 6px;font-size:16px}
-    .card .meta p{margin:0;color:var(--muted);font-size:13px}
-    .lightbox{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.8);z-index:1200}
+    .card .meta h3{margin:0 0 6px; font-size:16px}
+    .card .meta p{margin:0; color:var(--muted); font-size:13px}
+    .lightbox{position:fixed; inset:0; display:none; align-items:center; justify-content:center; background:rgba(0,0,0,0.8); z-index:1200}
     .lightbox.open{display:flex}
-    .lightbox img{max-width:95%;max-height:85%;border-radius:8px;box-shadow:0 20px 40px rgba(0,0,0,0.6)}
-    .lb-close{position:absolute;top:28px;right:28px;background:rgba(0,0,0,0.4);border-radius:8px;padding:8px 10px;cursor:pointer}
-    footer{margin:48px 0 16px;color:var(--muted);font-size:13px;text-align:center}
+    .lightbox img{max-width:95%; max-height:85%; border-radius:8px; box-shadow:0 20px 40px rgba(0,0,0,0.6)}
+    .lb-close{position:absolute; top:28px; right:28px; background:rgba(0,0,0,0.4); border-radius:8px; padding:8px 10px; cursor:pointer}
+    footer{margin:48px 0 16px; color:var(--muted); font-size:13px; text-align:center}
   </style>
 </head>
 <body>
@@ -63,7 +63,7 @@
     </div>
 
     <footer>
-      © <span id="year"></span> Keval Kotadia — <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" style="color:var(--muted);text-decoration:underline">Instagram</a>
+      © <span id="2025"></span> Keval Kotadia — <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" style="color:var(--muted); text-decoration:underline;">Instagram</a>
     </footer>
   </div>
 
@@ -71,7 +71,7 @@
     document.getElementById('year').textContent = new Date().getFullYear();
 
     async function loadGallery(){
-      try{
+      try {
         const res = await fetch('gallery.json', {cache: 'no-cache'});
         if(!res.ok) throw new Error('gallery.json not found');
         const data = await res.json();
@@ -79,30 +79,39 @@
         data.forEach(item => {
           const card = document.createElement('article');
           card.className = 'card';
+
           const img = document.createElement('img');
           img.loading = 'lazy';
           img.decoding = 'async';
           img.alt = item.alt || item.title || 'Photo by Keval Kotadia';
           img.src = item.src;
           img.addEventListener('click', () => openLightbox(item));
-          card.appendChild(img);
+
           const meta = document.createElement('div');
           meta.className = 'meta';
-          const h3 = document.createElement('h3'); h3.textContent = item.title || '';
-          const p = document.createElement('p'); p.textContent = item.year || '';
-          meta.appendChild(h3); meta.appendChild(p);
+
+          const h3 = document.createElement('h3');
+          h3.textContent = item.title || '';
+          const p = document.createElement('p');
+          p.textContent = item.year || '';
+
+          meta.appendChild(h3);
+          meta.appendChild(p);
+
+          card.appendChild(img);
           card.appendChild(meta);
+
           grid.appendChild(card);
         });
-      }catch(err){
-        document.getElementById('galleryGrid').innerHTML = '<p style=\"color:var(--muted)\">Gallery not available.</p>';
+      } catch (err) {
+        document.getElementById('galleryGrid').innerHTML = '<p style="color:var(--muted)">Gallery not available.</p>';
       }
     }
 
     const lb = document.getElementById('lightbox');
     const lbImg = document.getElementById('lbImage');
 
-    function openLightbox(item){
+    function openLightbox(item) {
       lbImg.src = item.src;
       lbImg.alt = item.alt || item.title || '';
       lb.classList.add('open');
@@ -114,14 +123,14 @@
     });
 
     lb.addEventListener('click', (e) => {
-      if(e.target === lb){
+      if (e.target === lb) {
         lb.classList.remove('open');
         lbImg.src = '';
       }
     });
 
     document.addEventListener('keydown', (e) => {
-      if(e.key === 'Escape') lb.classList.remove('open');
+      if (e.key === 'Escape') lb.classList.remove('open');
     });
 
     loadGallery();
