--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
       <nav>
-        <a href="gallery/index.html">Gallery</a>
+        <a href="../gallery/index.html">Gallery</a>
         <a href="about">About</a>
         <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
       </nav>
@@ -66,7 +66,7 @@
       <div class="hero-main">
         <p class="headline">Capturing the quiet moments in nature.</p>
         <p class="sub">Welcome — I’m Keval. I specialize in landscape and nature photography. Browse the gallery below and follow me on Instagram for my latest work.</p>
-        <a class="cta" href="gallery/index.html">View Gallery</a>
+        <a class="cta" href="../gallery/index.html">View Gallery</a>
       </div>
       <div class="hero-image" aria-hidden="true">
         <img src="images/featured.webp" alt="Featured photo" style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px">
