--- a/gallery/index.html
+++ b/gallery/index.html
@@ -45,7 +45,7 @@
       </div>
       <nav>
         <a href="../index.html">Home</a>
-        <a href="index.html">Gallery</a>
+        <a href="../gallery/index.html">Gallery</a>
         <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
       </nav>
     </header>
