--- a/gallery/index.html
+++ b/gallery/index.html
@@ -44,8 +44,8 @@
         </div>
       </div>
       <nav>
-        <a href="../index.html">Home</a>
-        <a href="../gallery/index.html">Gallery</a>
+        <a href="../">Home</a>
+        <a href="../gallery/">Gallery</a>
         <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
       </nav>
     </header>
